<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Snapby</string>
    <string name="app_full_name">Snapby&#8482;</string>
    <string name="app_id">807530715943166</string>
    <string name="settings">Settings</string>
    <string name="skip">Skip</string>
    <string name="snapby">Snapby</string>
    <string name="cancel">Cancel</string>
    <string name="no_location_dialog_title">Location access disabled</string>
    <string name="no_location_dialog_message">You can\'t snapby with no location! Tap "Settings" to edit these settings, otherwise tap "Skip".</string>
    <string name="no_google_play_services_title">Google Play Services</string>
    <string name="no_google_play_services_message">Install Google Play Services to enable your location on Snapby.</string>
    <string name="create_snapby_dialog_name">Your Snapby pseudo</string>
    <string name="create_snapby_dialog">What\'s happening here and now?</string>
    <string name="create_snapby_dialog_title">Create a snapby</string>
    <string name="create_snapby_dialog_count">140 characters</string>
    <string name="characters">characters</string>
    <string name="create_snapby_success">Success!</string>
    <string name="create_snapby_failure">Sorry, your snapby failed!</string>
    <string name="snapby_processing">Your snapby is being processed</string>
    <string name="create_snapby_instructions">Tap on the map to choose a snapby location around you, then tap DONE.</string>
    <string name="done">Done</string>
    <string name="powered_by_twitter">(powered by Twitter)</string>
    <string name="name_not_empty">Please enter a non-empty name.</string>
    <string name="name_too_long">Please enter a name of less than 20 characters.</string>
    <string name="description_too_long">Please enter a snapby of less than 140 characters.</string>
    <string name="loading">Loading...</string>
    <string name="feed_header">LATEST SNAPBYS</string>
    <string name="empty_feed">No snapbies in this area</string>
    <string name="empty_profile_feed">No snapbies yet</string>
    <string name="no_connection_feed">No internet connection</string>
    <string name="no_location">No location available</string>
    <string name="minute_ago">min ago</string>
    <string name="minutes_ago">mins ago</string>
    <string name="hour_ago">hour ago</string>
    <string name="hours_ago">hours ago</string>
    <string name="minute">minute</string>
    <string name="minutes">minutes</string>
    <string name="hour">hour</string>
    <string name="hours">hours</string>
    <string name="ago">ago</string>
    <string name="just_now">just now</string>
    <string name="now">now</string>
    <string name="snapby_expired">(expired)</string>
    <string name="expired">exp</string>
    <string name="no_connection">No internet connection</string>
    <string name="no_camera">No available camera on your device.</string>
    <string name="picture_failed">Failed to take a picture.</string>
    <string name="waiting_for_location">Waiting for your location...</string>
    <string name="no_camera_avaiable">No camera available. Please close other camera apps.</string>
    <string name="no_snapby_displayed">No snapby displayed...</string>
    <string name="status_bar_notification_title">Snapby</string>
    <string name="create_snapby_map_instruction">Tap on the map to refine your location</string>
    <string name="create_snapby_address_instruction">...or enter nearby address</string>
    <string name="nav_activity_address_instruction">Go to address or location:</string>
    <string name="create_snapby_activity_title">Create a snapby</string>
    <string name="create_snapby_button">Snapby!</string>
    <string name="new_snapby_location_address_hint">ex: Revolution Cafe or 150 Market Street</string>
    <string name="search_location_hint">ex: 150 Marker Street, San Francisco</string>
    <string name="nav_address_geocoding_processing">Searching for %s...</string>
    <string name="create_snapby_address_geocoding_processing">Searching for %s nearby...</string>
    <string name="new_snapby_geocoding_successful">Snapby location updated on map</string>
    <string name="refine_location_failure">No better location available.</string>
    <string name="new_snapby_geocoding_failed">Not found or not nearby location</string>
    <string name="address_geocoding_failed">Location not found</string>
    <string name="notification_preference_dialog_instruction">Adjust your notification radius to get notified when somebody snapbies near you. Choose \"none\" to disable notifications.</string>
    <string name="username_preference_button">Username</string>
    <string name="profile_picture_preference_button">Profile picture</string>
    <string name="notification_preference_dialog_title">Notification radius</string>
    <string name="distance_unit_preference_button">Distance unit</string>
    <string name="feedback_preference_button">Feedback or bug report</string>
    <string name="rate_me_preference_button">Rate me!</string>
    <string name="logout">LOG OUT</string>
    <string name="feed_back_mail_title">Feedback for Snapby on Android (v%s)</string>
    <string name="no_google_play_store">Couldn\'t launch the google play store</string>
    <string name="no_sd_card">Please insert an SD card in your phone.</string>
    <string name="update_profile_picture_failure">Failed to update profile picture, please try again.</string>
    <string name="update_profile_picture_success">Profile picture updated!</string>
    <string name="no_space_picture">Couldn\'t find a place to store a picture.</string>
    <string name="photo_choosing_error">An error occured while selecting your image, please try again.</string>
    <string name="photo_not_found">Couldn\'t find your image, please try again.</string>
    <string name="failed_saving_photo">We couldn\'t save your picture to the gallery.</string>
    <string name="select_picture_from">Select profile picture from...</string>
    <string name="snapby_by">by</string>
    <string name="rotate">rotate</string>
    <string name="crop">crop</string>
    <string name="near">near</string>
    <string name="far">far</string>
    <string name="meters">meters</string>
    <string name="away">away</string>
    <string name="snapbies_so_far">snapbies so far</string>
    <string name="snapby_so_far">snapby so far</string>
    <string name="snapby_settings">SETTINGS</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="participate">PARTICIPATE</string>
    <string name="add_photo">Add photo</string>
    <string name="refine_location">Refine location</string>
    <string name="done_cap">DONE</string>
    <string name="invalid_email_error">Please enter a valid email.</string>
    <string name="password_length_error">Your password should contain at least 6 characters.</string>
    <string name="signin_processing">Signing in...</string>
    <string name="signup_processing">Signing up...</string>
    <string name="reset_password_processing">Sending reset password instructions...</string>
    <string name="invalid_signin_message">Your email or password is incorrect.</string>
    <string name="invalid_username_error">Please enter a valid username (letters, numbers or ._+-)</string>
    <string name="username_length_error">Your username should contain between 6 and 20 characters.</string>
    <string name="password_match_error">Passwords don\'t match.</string>
    <string name="username_taken_error">Username already taken.</string>
    <string name="email_taken_error">Email already taken.</string>
    <string name="email_not_found">Your email does not correspond to any existing user.</string>
    <string name="reset_password_success">An email with reset password instructions has just been sent.</string>
    <string name="facebook_connect_failed">Connection to Facebook failed. Please try again.</string>
    <string name="username_successfully_updated">Username successfully updated.</string>
    <string name="like">like</string>
    <string name="likes">likes</string>
    <string name="comment">comment</string>
    <string name="comments">comments</string>
    <string name="share_snapby_text">Snapby let\'s you explore and share photos with the people physically around you! %s</string>
    <string name="share_snapby_subject">You should checkout Snapby.</string>
    <string name="report_snapby">Report</string>
    <string name="delete_snapby">Delete</string>
    <string name="share_snapby">Share</string>
    <string name="directions_to_snapby">Directions</string>
    <string name="report_snapby_successful">Thank you for sharing your concern!</string>
    <string name="report_snapby_failed">We couldn\'t report this snapby, please try again.</string>
    <string name="successful_delete_snapby">Snapby successfully deleted.</string>
    <string name="failed_delete_snapby">Failed to delete snapby.</string>
    <string name="no_comments_in_feed">No comments yet...</string>
    <string name="no_snapbies_in_feed">No snapbies so far...</string>
    <string name="no_activity_in_feed">No activity so far...</string>
    <string name="no_likes_in_feed">No likes yet...</string>
    <string name="no_snapbyer_in_feed">No snapbyers to display...</string>
    <string name="your_email">Your email</string>
    <string name="your_password">Your password</string>
    <string name="your_confirmation">Confirm password</string>
    <string name="your_username">Choose a username (public)</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="connect_with_fb">Connect with Facebook</string>
    <string name="signup_with_email">Sign up with Email</string>
    <string name="signin_with_email">Already have an account? Sign in here.</string>
    <string name="snapby_like_failed">We couldn\'t save your like, please try again.</string>
    <string name="snapby_unlike_failed">We couldn\'t unlike your snapby, please try again.</string>
    <string name="create_comment_hint">Write a comment...</string>
    <string name="create_comment_failed">We couldn\'t save your comment, please try again.</string>
    <string name="anonymous_mode_enabled">Anonymous mode enabled.</string>
    <string name="anonymous_mode_disabled">Anonymous mode disabled.</string>
    <string name="anonymous_name">Anonymous</string>
    <string name="user_blacklisted">You have been blacklisted due to Terms of Use violations.</string>
    <string name="follow_cap">FOLLOW</string>
    <string name="following_cap">FOLLOWING</string>
    <string name="follow">follow</string>
    <string name="unfollow">unfollow</string>
    <string name="find_friends">FIND SHOUTERS</string>
    <string name="failed_to_retrieve_snapby">Failed to retrieve snapby.</string>
    <string name="snapby_is_expired">Too late! This snapby has expired.</string>
    <string name="snapbies_cap">SNAPBYS</string>
    <string name="display_created">Created:</string>
    <string name="display_last_active">Last active:</string>
    <string name="tutorial_explore_button">Explore snapbies around you.</string>
    <string name="tutorial_profile_button">Keep track of your snapbies.</string>
    <string name="tutorial_dismiss">(tap anywhere to dismiss tutorial)</string>
    <string name="tutorial_picture_button">A snapby is a picture shared with your neighborhood!</string>
    <string name="camera_call_to_action">Be #%d to snapby in this area!</string>
</resources>
