<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/darkGrey">
    <LinearLayout android:id="@+id/feed_shout_header"
                  android:layout_width="fill_parent"
                  android:layout_height="@dimen/feed_header_height"
                  android:orientation="horizontal"
                  android:background="@drawable/button_dark">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:textSize="18dp"
                android:text="@string/feed_header"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical"/>
        <FrameLayout android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical">
            <ImageView android:layout_width="wrap_content"
                       android:layout_height="@dimen/feed_header_refresh_heigh"
                       android:layout_gravity="right"
                       android:layout_marginRight="10dp"
                       android:src="@drawable/feed_refresh_ic"/>
        </FrameLayout>

    </LinearLayout>

    <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:background="@color/lightGrey"/>
    <ListView
            android:id="@+id/global_shouts_feed"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@color/darkGrey"
            android:divider="@android:color/transparent"/>

    <LinearLayout android:id="@+id/empty_feed_view"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical">
        <TextView
                android:id="@+id/empty_feed_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:text="@string/empty_feed"
                android:layout_margin="10dp"/>

    </LinearLayout>

    <LinearLayout android:id="@+id/no_connection_feed_view"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical">
        <TextView
                android:id="@+id/empty_feed_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:text="@string/no_connection"
                android:layout_margin="10dp"/>

    </LinearLayout>
</LinearLayout>