<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/comment_root_view"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white">


    <FrameLayout android:id="@+id/comments_feed_progress_bar"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:visibility="gone" >

        <ProgressBar android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"/>

    </FrameLayout>

    <LinearLayout android:id="@+id/comments_feed_wrapper"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:layout_weight="1"
                  android:orientation="vertical">

        <ListView
                android:id="@id/android:list"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"/>

        <TextView
                android:id="@id/android:empty"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="@string/no_comments_in_feed"/>

    </LinearLayout>

    <TextView
            android:id="@+id/no_connection_feed"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:visibility="gone"
            android:text="@string/no_connection_feed"/>

    <LinearLayout android:id="@+id/comment_edittext_container"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:background="@color/white"
                  android:orientation="vertical">

        <View android:layout_width="match_parent"
              android:layout_height="1dp"
              android:background="@color/veryLightGrey"/>

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="50dp"
                      android:orientation="horizontal">


            <FrameLayout android:layout_width="50dp"
                         android:layout_height="match_parent"
                         android:layout_weight="1">

                <EditText
                        android:id="@+id/create_comment_editText"
                        android:inputType="textCapSentences|textNoSuggestions"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center|left"
                        android:layout_marginLeft="5dp"
                        android:textColor="@color/darkGrey"
                        android:hint="@string/create_comment_hint"
                        android:background="@null"
                        android:singleLine="true"/>

            </FrameLayout>


            <ImageView android:id="@+id/create_comment_send_button"
                       android:layout_width="50dp"
                       android:padding="10dp"
                       android:layout_height="match_parent"
                       android:src="@drawable/create_send_button_selector"
                       android:background="@color/snapbyPink"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>