<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/map"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              class="com.google.android.gms.maps.MapFragment" />

    <ImageView android:id="@+id/explore_refresh_button"
               android:layout_width="60dp"
               android:layout_height="60dp"
               android:padding="10dp"
               android:src="@drawable/explore_refresh_button_selector"
               android:layout_gravity="top|left"/>


    <com.snapby.android.custom.SnapbyViewPagerContainer android:id="@+id/explore_snapby_view_pager_container"
                                                            android:layout_width="match_parent"
                                                            android:layout_height="220dp"
                                                            android:layout_gravity="bottom"
                                                            android:layout_marginBottom="10dp"
                                                            android:gravity="center">

        <android.support.v4.view.ViewPager
                android:id="@+id/explore_view_pager"
                android:layout_width="145dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"/>

    </com.snapby.android.custom.SnapbyViewPagerContainer>

    <TextView android:id="@+id/explore_snapby_no_connection"
              android:text="@string/no_connection_feed"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:paddingTop="3dp"
              android:paddingBottom="3dp"
              android:paddingLeft="8dp"
              android:paddingRight="8dp"
              android:background="@drawable/rounded_background"
              android:textSize="25dp"
              android:textColor="@color/white"
              android:gravity="center"
              android:layout_gravity="center"
              android:visibility="gone"/>

    <TextView android:id="@+id/explore_snapby_no_snapby"
              android:text="@string/empty_feed"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:paddingTop="3dp"
              android:paddingBottom="3dp"
              android:paddingLeft="8dp"
              android:paddingRight="8dp"
              android:background="@drawable/rounded_background"
              android:textSize="25dp"
              android:textColor="@color/white"
              android:gravity="center"
              android:layout_gravity="center"
              android:visibility="gone"/>

    <FrameLayout android:id="@+id/explore_snapby_progress_bar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:background="@drawable/rounded_background">

        <ProgressBar android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="10dp"
                     android:layout_gravity="center"/>

    </FrameLayout>

    <FrameLayout android:id="@+id/explore_snapby_no_location"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:background="@drawable/rounded_background"
                 android:visibility="gone">

        <TextView android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="10dp"
                     android:text="@string/waiting_for_location"
                     android:textColor="@color/white"
                     android:layout_gravity="center"/>

    </FrameLayout>

</FrameLayout>